<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp" >
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ime_prezime"/>
    
    <EditText android:id="@+id/ime_prezime"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>
    
    <EditText android:id="@+id/email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naslov"/>
    
    <EditText android:id="@+id/naslov"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poruka"/>
    
    <EditText android:id="@+id/poruka"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:maxLines="12"
        android:scrollbars="vertical"
        android:gravity="start"
        />
        <Button android:id="@+id/posalji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/posalji"
        android:textColor="@color/white"
        android:background="@color/button_red"/>
    

</LinearLayout>
