<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView android:layout_alignParentTop="true"
        android:id="@+id/name_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/drug_name"/>
    <TextView android:layout_toRightOf="@id/name_label"
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
	/>
    <TextView android:layout_below="@id/name_label"
        android:id="@+id/ingredients_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/ingredients"/>
    <TextView android:layout_toRightOf="@id/ingredients_label"
        android:layout_below="@id/name"
        android:id="@+id/ingredients"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
	/>
    <TextView android:layout_below="@id/ingredients_label"
        android:id="@+id/price_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/price_range"/>
    <TextView android:layout_toRightOf="@id/price_label"
        android:layout_below="@id/ingredients"
        android:id="@+id/price"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
	/>
    

</RelativeLayout>
